Added binance data api

--- a/webapp/app/web/web_templates/dashboard1.html
+++ b/webapp/app/web/web_templates/dashboard1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Stock Screener</title>
+    <title>Stock data_providers</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -55,7 +55,7 @@
     <nav id="sidebar" class="sticky-top">
 
         <div class="sidebar-header sticky-top">
-            <h3>Stock Screener<sup></sup></h3>
+            <h3>Stock data_providers<sup></sup></h3>
         </div>
 
         <!--        navigation normal-->
@@ -95,7 +95,7 @@
                     <span></span>
                     <span></span>
                 </button>
-                <span class="mx-auto"><h5 id="current-page" class="pt-2"> Simple Stock Screener  </h5>
+                <span class="mx-auto"><h5 id="current-page" class="pt-2"> Simple Stock data_providers  </h5>
 </span>
                 <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -202,8 +202,8 @@
                     <li>DISCLAIMER: <em>This app and the information contained herein do not constitute any financial or
                         investment advice.</em></li>
                 </ol>
-                <p>Simple stock screener. The stocks are filtered from 8000+ stocks traded in the US.</p>
-                <h6>Screener criterias:</h6>
+                <p>Simple stock data_providers. The stocks are filtered from 8000+ stocks traded in the US.</p>
+                <h6>data_providers criterias:</h6>
                 <ul>
                     <li>The current price > SMA50 > SMA150 > SMA200</li>
                     <li>The current price must be at least 30% above the 52 week low.</li>
@@ -268,6 +268,7 @@
 
 <!--<script src="/static/js/my_chart.js"></script>-->
 <script src="/web/web_static/js/echarts.min.js"></script>
+<script src="/web/web_static/js/functions.js"></script>
 <script src="/web/web_static/js/myEChart.js"></script>
 
 </body>
