Added TTM-Squeeze indicator scanner. :-)

--- a/webapp/app/web/web_templates/ttm-squeeze.html
+++ b/webapp/app/web/web_templates/ttm-squeeze.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Stock data_providers</title>
+    <title>TTM Squeeze Indicator Screener</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Our Custom CSS -->
-    <link rel="stylesheet" href="/web/web_static/css/dashboard0.css?version=1">
+    <link rel="stylesheet" href="/web/web_static/css/ttm-squeeze.css?version=2">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
@@ -55,7 +55,7 @@
     <nav id="sidebar" class="sticky-top">
 
         <div class="sidebar-header sticky-top">
-            <h3>Stock data_providers<sup></sup></h3>
+            <h3>Indicator Scanner<sup></sup></h3>
         </div>
 
         <!--        navigation normal-->
@@ -70,9 +70,9 @@
                     <li>
                         <a href="#content" id="section1">Main</a>
                     </li>
-                    <li>
-                        <a href="#indicators" id="section2">Indicators</a>
-                    </li>
+<!--                    <li>-->
+<!--                        <a href="#indicators" id="section2">Indicators</a>-->
+<!--                    </li>-->
                     <li>
                         <a href="#about-content" id="section3">About</a>
                     </li>
@@ -95,7 +95,7 @@
                     <span></span>
                     <span></span>
                 </button>
-                <span class="mx-auto"><h5 id="current-page" class="pt-2"> Simple Stock data_providers  </h5>
+                <span class="mx-auto"><h5 id="current-page" class="pt-2"> Technical Indicator Scanner (TTM Squeeze) [Crypto] </h5>
 </span>
                 <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -127,116 +127,120 @@
 
 
         <div id="selectedContent" class="container-fluid">
-
+            <div class="row">
+                <p>
+                    Automatically updated daily. Last scanned and updated on : <span id="last_update"></span>
+                </p>
+            </div>
             <div class="row" id="main">
-                <div class="col-md-8">
-                    <div class="row">
-                        <div class="col-6" id="chart-type">
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <button class="btn btn-outline-secondary bg-success text-white" type="button">Chart
-                                        Type
-                                    </button>
-                                </div>
-                                <label for="select-chart-type"></label><select class="custom-select"
-                                                                               id="select-chart-type">
-                                <option value="1">Basic</option>
-                                <option value="2">Basic+Vol</option>
-                                <!--                                                    <option value="3">Three</option>-->
-                            </select>
+                    <div class="col-md-4" id="chart-type">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <button class="btn btn-outline-secondary bg-success text-white" type="button">Chart
+                                    Type
+                                </button>
                             </div>
-                        </div>
-                        <div class="col-6" id="market-cap-min">
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <button class="btn btn-outline-secondary bg-success text-white" type="button">Market
-                                        Cap
-                                    </button>
-                                </div>
-                                <label for="select-market-cap-min"></label><select class="custom-select"
-                                                                                   id="select-market-cap-min">
-                                <option value=0 selected>All</option>
-                                <option value=100>>100 Million</option>
-                                <option value=500>>500 Million</option>
-                                <option value=1000>>1 Billion</option>
-                                <!--                                                    <option value="3">Three</option>-->
-                            </select>
-                            </div>
+                            <label for="select-chart-type"></label><select class="custom-select"
+                                                                           id="select-chart-type">
+                            <option value="1">Basic</option>
+                            <option value="2">Basic+Vol</option>
+                            <!--                                                    <option value="3">Three</option>-->
+                        </select>
                         </div>
                     </div>
+                    <div class="col-md-4 ml-auto mr-5">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <button class="btn btn-outline-secondary bg-success text-white" type="button">TICKER
+                                </button>
+                            </div>
+                            <select class="custom-select" id="select-top-picks">
+                                <!--                    <option selected>Choose...</option>-->
+                                <!--                    <option value="1">One</option>-->
+                                <!--                    <option value="2">Two</option>-->
+                                <!--                    <option value="3">Three</option>-->
+                            </select>
+                        </div>
+                    </div>
+
+                    <!--region Description-->
+                    <!--                    <div class="col-6" id="market-cap-min">-->
+                    <!--                        <div class="input-group mb-3">-->
+                    <!--                            <div class="input-group-prepend">-->
+                    <!--                                <button class="btn btn-outline-secondary bg-success text-white" type="button">Market-->
+                    <!--                                    Cap-->
+                    <!--                                </button>-->
+                    <!--                            </div>-->
+                    <!--                            <label for="select-market-cap-min"></label><select class="custom-select"-->
+                    <!--                                                                               id="select-market-cap-min">-->
+                    <!--                            <option value=0 selected>All</option>-->
+                    <!--                            <option value=100>>100 Million</option>-->
+                    <!--                            <option value=500>>500 Million</option>-->
+                    <!--                            <option value=1000>>1 Billion</option>-->
+                    <!--                            &lt;!&ndash;                                                    <option value="3">Three</option>&ndash;&gt;-->
+                    <!--                        </select>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
+                    <!--endregion-->
+
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+
                     <div class="col-12" id="main-chart"></div>
                 </div>
-                <div class="col-md-4">
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <button class="btn btn-outline-secondary bg-success text-white" type="button">TICKER
-                            </button>
-                        </div>
-                        <select class="custom-select" id="select-top-picks">
-                            <!--                    <option selected>Choose...</option>-->
-                            <!--                    <option value="1">One</option>-->
-                            <!--                    <option value="2">Two</option>-->
-                            <!--                    <option value="3">Three</option>-->
-                        </select>
-                    </div>
-                    <div id="profile-container">
-
-                    </div>
-                </div>
-
-            </div>
-            <div class="row" id="indicators">
-                <!--                <div id="bar-chart" class="col-md-9"></div>-->
-                <div id="pie-chart" class="col-md-6 p-0 m-0"></div>
-                <div id="gauge-chart" class="col-md-6 p-0 m-0"></div>
-
             </div>
 
-            <div class="col-12 mt-5 p-5 mb-5" id="about-content">
-                <h5>About</h5>
-                <p>Developed by <a href="mailto: phanveehuen@gmail.com">Vee H. Phan</a></p>
-                <p>Objectives:</p>
-                <ol>
-                    <li>Educational purpose (Especially my own).</li>
-                    <li>As a simple app to add to my coding portfolio.</li>
-                    <li>DISCLAIMER: <em>This app and the information contained herein do not constitute any financial or
-                        investment advice.</em></li>
-                </ol>
-                <p>Simple stock data_providers. The stocks are filtered from 8000+ stocks traded in the US.</p>
-                <h6>data_providers criterias:</h6>
-                <ul>
-                    <li>The current price > SMA50 > SMA150 > SMA200</li>
-                    <li>The current price must be at least 30% above the 52 week low.</li>
-                    <li>The current price must be within 25% of the 52 week high.</li>
-                    <li>price_relative_to_SP500 for 4, 13, 26 weeks > 30%</li>
+        </div>
+        <div class="row" id="indicators">
+            <!--                <div id="bar-chart" class="col-md-9"></div>-->
+            <div id="pie-chart" class="col-md-6 p-0 m-0"></div>
+            <div id="gauge-chart" class="col-md-6 p-0 m-0"></div>
 
-                </ul>
-                <p>
-                    Uses the following:
-                </p>
-                <ul>
-                    <li><a href="https://finnhub.io/docs/api">Finhubb financial API</a></li>
-<!--                    <li>-->
-<!--                        <a href="https://facebook.github.io/prophet/">Facebook Prophet library (Python)</a>-->
-<!--                    </li>-->
-                    <li>
-                        <a href="https://echarts.apache.org/en/index.html">ECharts.js</a>
-                    </li>
-                    <li>
-                        Python Flask on backend. Vanilla Javascript on the frontend.
-                    </li>
-                    <li>
-                        Bootstrap 4 CSS Framework.
-                    </li>
-
-                </ul>
-                <div style="height: 300px"></div>
-
-            </div>
         </div>
 
+        <div class="col-12 mt-5 p-5 mb-5" id="about-content">
+            <h5>About</h5>
+            <p>Developed by <a href="mailto: phanveehuen@gmail.com">Vee H. Phan</a></p>
+<!--            <p>Objectives:</p>-->
+<!--            <ol>-->
+<!--                <li>Educational purpose.</li>-->
+<!--                <li>DISCLAIMER: <em>This app and the information contained herein do not constitute any financial or-->
+<!--                    investment advice.</em></li>-->
+<!--            </ol>-->
+            <p>Crpyto pairs with base = [USDT, BTC, ETH] traded on Binance is scanned for TTM-Squeeze.</p>
+            <h6>Reference/Tutorials/Inspiration from:</h6>
+            <ul>
+                <li><a target="_blank" href="https://www.youtube.com/watch?v=YhkNoOqYp9A">Youtube video on 'Part Time Larry' channel</a></li>
+                <li><a target="_blank" href="https://www.tradingview.com/script/nqQ1DT5a-Squeeze-Momentum-Indicator-LazyBear/#chart-view-comments">Trading View Indicator by 'Lazy Bear'.</a></li>
 
+            </ul>
+            <p>
+                Uses the following:
+            </p>
+            <ul>
+                <li>Binance API</li>
+                <!--                    <li>-->
+                <!--                        <a href="https://facebook.github.io/prophet/">Facebook Prophet library (Python)</a>-->
+                <!--                    </li>-->
+                <li>
+                    <a href="https://echarts.apache.org/en/index.html">Javascript Charting Library, ECharts.js</a>
+                </li>
+                <li>
+                    Python Flask on backend. Vanilla Javascript on the frontend.
+                </li>
+                <li>
+                    Bootstrap 4 CSS Framework.
+                </li>
+
+            </ul>
+            <div style="height: 300px"></div>
+
+        </div>
     </div>
+
+
+</div>
 
 </div>
 
